[tool.poetry]
name = "caw"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7"
twint = "^2.1.20"

[tool.poetry.dev-dependencies]
ipython = "*"
black = { version = "*", allow-prereleases = true }
flake8 = "*"
flake8-black = "*"
pytest = "*"
mypy = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
