[tool.poetry]
name = "caw"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
# <3.8 => https://github.com/twintproject/twint/issues/569
python = ">=3.6, <3.8"
twint = { version = "^2.1.20", optional = true }
uvicorn = { version = "^0.11.7", optional = true }
starlette = { version = "^0.13.8", optional = true }
starlette-feedgen = { version = "^0.1.3", optional = true }
dataclasses = { version = "0.7", python = ">=3.6,<3.7" }

[tool.poetry.dev-dependencies]
ipython = "*"
black = { version = "*", allow-prereleases = true }
flake8 = "*"
flake8-black = "*"
pytest = "*"
mypy = "*"

[tool.poetry.extras]
twint = ["twint"]
rss = ["twint", "starlette", "uvicorn", "starlette-feedgen"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
